--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.8",
+    "@egjs/flicking-plugins": "^4.3.0",
+    "@egjs/react-flicking": "^4.5.2",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@firebase/analytics": "^0.7.3",
     "@firebase/app": "^0.7.6",
+    "@merc/react-timeline": "^0.1.42",
     "@openzeppelin/contracts": "^4.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,6 +24,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^4.1.17",
     "ipfs-http-client": "^52.0.0",
+    "lightgallery": "^2.4.0",
     "react": "^17.0.2",
     "react-background-button": "^1.0.1",
     "react-canvas-draw": "^1.1.1",
@@ -36,6 +40,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "swiper": "^8.0.7",
     "web-vitals": "^1.0.1",
     "web3": "^1.5.1",
     "web3-eth-contract": "^1.5.2"
